# frag-template-reg

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: dgcnn_profile_axisym_y.py  dgcnn_profile_global_axisym_y.py  dgcnn_profile_global_axisym_y_one_scene.py  dgcnn_xyz.py  dgcnn_xyz_symmetry.py
fragreg/: __init__.py  registry.py
fragreg/data/: __init__.py  dataloaders.py
fragreg/data/datasets/: __init__.py  fragment_registration_dataset.py
fragreg/data/transforms/: __init__.py  point_transforms.py
fragreg/evaluation/: __init__.py  evaluator.py  metrics.py
fragreg/geometry/: __init__.py  axisymmetric_solver.py  kabsch.py  symmetry.py  transforms.py
fragreg/losses/: __init__.py  correspondence_loss.py  profile_loss.py  symmetry_losses.py
fragreg/models/: __init__.py  builder.py
fragreg/models/dgcnn/: __init__.py  dgcnn_correspondence.py  dgcnn_profile.py  dgcnn_profile_global.py  edgeconv.py
fragreg/training/: __init__.py  checkpoint.py  logger.py  trainer.py
fragreg/utils/: __init__.py  config.py  io.py  seed.py  units.py
fragreg/visualization/: __init__.py  profile_inference.py
scripts/: debug_batch.py  debug_profile_batch.py  debug_profile_global_batch.py  evaluate.py  infer_profile_global.py  train.py  visualize_frame_object_placements.py
tools/: check_dataset.py  oracle_axisymmetric_registration_dataset.py  oracle_kabsch_dataset.py
